--- a/prácticas/p01/ej03.md
+++ b/prácticas/p01/ej03.md
@@ -42,3 +42,121 @@ Pserver | Pclient
 ≡ 0 | 0
 ≡ 0
 ```
+
+## d)
+
+```
+(νx:Tester1)(Pserver | Pclient)
+≡ (νx:Tester1)(Pclient | Pserver)
+≡ (νx:?int.!bool.end)(x-!1.x-?(z:bool).0 | x+?(y:int).x+!true.0)
+{τ,-} → (νx:!bool.end)(x-?(z:bool).0 | (x+!true.0){1/y})
+≡ (νx:!bool.end)(x+!true.0 | x-?(z:bool).0)
+{τ,-} → (νx:end)(0 | 0{true/z})
+≡ (νx:end)(0 | 0)
+≡ (νx:end)(0)
+≡ 0
+```
+
+## e)
+
+```
+(νx:Tester2)(Pserver | Pclient)
+≡ (νx:Tester2)(Pclient | Pserver)
+≡ (νx:?int.!int.end)(x-!1.x-?(z:bool).0 | x+?(y:int).x+!true.0)
+{τ,-} → (νx:!int.end)(x-?(z:bool).0 | (x+!true.0){1/y})
+≡ (νx:!int.end)(x+!true.0 | x-?(z:bool).0)
+```
+
+**Qué pasa acá?**
+
+## f)
+
+```
+(νy:Tester1)(Pserver | Pclient)
+≡ (νy:Tester1)(Pclient | Pserver)
+≡ (νy:Tester1)(x-!1.x-?(z:bool).0 | x+?(y:int).x+!true.0)
+≡ (νy:Tester1)(x-!1.x-?(z:bool).0 | x+?(z:int).x+!true.0) // α-equivalencia
+{x,-} → (νy:Tester1)(x-?(z:bool).0 | (x+!true.0){1/z})
+≡ (νy:Tester1)(x-?(z:bool).0 | x+!true.0)
+≡ (νy:Tester1)(x+!true.0 | x-?(z:bool).0)
+{x,-} → (νy:Tester1)(0 | 0{true/z})
+≡ (νy:Tester1)(0 | 0)
+≡ (νy:Tester1)(0)
+```
+
+## g)
+
+```
+(νy:Tester2)(Pserver | Pclient)
+```
+
+Análogo a f) porque `Pserver` y `Pclient` se comunican sobre el canal `x` ≠ `y`.
+
+## h)
+
+```
+(νx:Tester1)Pserver | Pclient
+≡ (νx:?int.!bool.end)(x+?(y:int).x+!true.0) | x-!1.x-?(z:bool).0
+```
+
+Se traba porque $x^p \in \text{fn}(\text{Pclient})$, entonces no se puede aplicar la equivalencia estructural.
+
+```
+(νx:Tester1)Pserver | Pclient ≢ (νx:Tester1)(Pserver | Pclient)
+```
+
+## i)
+
+El problema patológico con esta expresión es que los session types modelan una comunicación binaria, es decir entre únicamente 2 procesos (delegar canales es otra cosa). `PServer` puede comunicarse tanto con `Pclient` como con `Qclient` indistintamente. Incluso podrían comunicarse `Pclient` con `Qclient` después de que uno de ellos mande su `int`.
+
+Hay muchas reducciones posibles, este es un caso donde `PServer` se comunica con `Pclient` como en el inciso c), y `Qclient` no reduce.
+
+```
+Pserver | Pclient | Qclient
+≡ 0 | Qclient   # Por inciso c
+≡ Qclient
+```
+
+## j)
+
+Si bien ahora podemos reducir al proceso `0`, esto depende exclusivamente de qué procesos elegimos comunicar. Si asociamos un `PServer` con `Pclient` y el otro `PServer` con `Qclient` entonces llegamos a `0`.
+
+Pero hay otras posibles reducciones que quedan trabadas, por ejemplo:
+
+```
+Pserver | Pserver | Pclient | Qclient
+≡ Pclient | Pserver | Pserver | Qclient
+≡ (x-!1.x-?(z:bool).0) | (x+?(y:int).x+!true.0) | Pserver | Qclient
+{x,-} → (x-?(z:bool).0) | (x+!true.0){1/y} | Pserver | Qclient
+≡ (x-?(z:bool).0) | (x+!true.0) | Pserver | Qclient
+≡ (x-?(z:bool).0) | (x+!true.0) | (x+?(y:int).x+!true.0) | Qclient
+{x,0} → (x-?(z:bool).0) | 0 | (x+!true.0){true/y} | Qclient
+≡ (x-?(z:bool).0) | (x+!true.0) | Qclient
+≡ (x+!true.0) | (x-?(z:bool).0) | Qclient
+{x,-} → 0 | 0{true/z} | Qclient
+≡ 0 | 0 | Qclient
+≡ 0 | Qclient
+≡ Qclient
+```
+
+## k)
+
+```
+(νx:Tester1)(Pserver | Qserver | Pclient | Qclient)
+```
+
+Ahora la comunicación entre estos procesos sobre el canal `x` se realiza de forma "privada" debido a la restricción `νx`. Pero seguimos en el caso patológico, los session types básicos solo modelan comunicaciones entre 2 procesos.
+
+El canal `x` tiene asociado el siguiente protocolo, o mejor dicho session type: `Tester1 = ?int.!bool.end`. En español esto dice que por el canal `x` se recibe un `int`, luego de envía un `bool` y termina la comunicación. Cuando algún par de procesos intenten comunicarse sobre el canal `x` van a ir "consumiendo" el session type (como si fuese una lógica lineal).
+
+Por lo tanto, por más que comuniquemos a los procesos de la forma "conveniente" para que todos terminen, por ejemplo primero reducimos `Pserver` y `Pclient`, cuando intentemos reducir `Qserver` y `Qclient` no vamos a poder porque el canal `x` ya tiene tipo `end`. No se puede aplicar la regla `R-NewS`.
+
+## l)
+
+Este caso funciona bien porque hay 2 canales, y cada par de procesos tiene su propio canal para comunicarse. Y ya vimos en el inciso d) que estas expresiones reducen a `0`.
+
+```
+(νx:Tester1)(Pserver | Pclient) | (νx:Tester1)(Qserver | Qclient)
+*→ 0 | 0
+≡ 0
+```
