Completa el inciso c

--- a/prácticas/p01/ej03.md
+++ b/prácticas/p01/ej03.md
@@ -19,7 +19,7 @@ Dar el LTS correspondiente a cada uno de los siguientes procesos.
 Pserver = x+?(y:int).x+!true.0
 ```
 
-La expresión no es un redex (reducible expresión).
+La expresión está en forma normal, no se puede reducir.
 
 ## b)
 
@@ -27,7 +27,7 @@ La expresión no es un redex (reducible expresión).
 (νx:Tester1) Pserver
 ```
 
-La expresión no es un redex (reducible expresión).
+La expresión está en forma normal, no se puede reducir.
 
 ## c)
 
@@ -65,9 +65,13 @@ Pserver | Pclient
 ≡ (νx:?int.!int.end)(x-!1.x-?(z:bool).0 | x+?(y:int).x+!true.0)
 {τ,-} → (νx:!int.end)(x-?(z:bool).0 | (x+!true.0){1/y})
 ≡ (νx:!int.end)(x+!true.0 | x-?(z:bool).0)
-```
 
-**Qué pasa acá?**
+# La reducción no respeta el session type
+{τ,-} → (νx:end)(0 | 0{true/z})
+≡ (νx:end)(0 | 0)
+≡ (νx:end)(0)
+≡ 0
+```
 
 ## f)
 
