--- a/prácticas/p01/ej04.md
+++ b/prácticas/p01/ej04.md
@@ -86,5 +86,5 @@ Dar el LTS correspondiente a los siguientes procesos.
 
 # Aún no podemos quitar la restricción sobre x.
 # No sabemos si Q1/Q2 son 0.
-≡ (νx:!int.end)(Q1{2/z} | Q2{2/z})
+≡ (νx:end)(Q1{2/z} | Q2{2/z})
 ```
