--- a/prácticas/p02/ej01.md
+++ b/prácticas/p02/ej01.md
@@ -22,6 +22,7 @@ Bien tipado.
 
 
 ```
+                 X                                                    X
 x+:!int.!int.end ⊢ x+?(z:int).x+?(z:int).0           x-:?int.?int.end ⊢ x-!1.x-!2.0
 ----------------------------------------------------------------------------------- [T-Par]
 x+:!int.!int.end, x-:?int.?int.end ⊢ x+?(z:int).x+?(z:int).0 | x-!1.x-!2.0
@@ -30,3 +31,18 @@ x+:!int.!int.end, x-:?int.?int.end ⊢ x+?(z:int).x+?(z:int).0 | x-!1.x-!2.0
 ```
 
 No está bien tipado porque por convención el session type declarado en la restricción `νx:S` le corresponde al endpoint `x+`, y luego el session type dual de `S` le corresponde al otro endpoint `x-`. Por lo tanto el juicio de tipado se traba porque los procesos están usando los endpoints al revés.
+
+## c)
+
+```
+                                                                             X
+                                              x-:!int.!int.end ⊢ x-!1.0    ∅ ⊢ x-!2.0
+                                              --------------------------------------- [T-Par]
+x+:?int.?int.end ⊢ x+?(z:int).x+?(z:int).0    x-:!int.!int.end ⊢ x-!1.0 | x-!2.0
+-------------------------------------------------------------------------------- [T-Par]
+x+:?int.?int.end, x-:!int.!int.end ⊢ x+?(z:int).x+?(z:int).0 | x-!1.0 | x-!2.0
+------------------------------------------------------------------------------ [T-Res]
+∅ ⊢ (νx:?int.?int.end)(x+?(z:int).x+?(z:int).0 | x-!1.0 | x-!2.0)
+```
+
+No está bien tipado porque 2 procesos quieren usar el mismo endpoint `x-` y ya vimos que eso no es posible con **binary** session types. El proceso `x-!2.0` pierde el tipado del endpoint `x-` y se traba el juicio de tipado.
