No hace falta renombrar las variables

--- a/prácticas/p01/ej03.md
+++ b/prácticas/p01/ej03.md
@@ -79,8 +79,7 @@ Pserver | Pclient
 (νy:Tester1)(Pserver | Pclient)
 ≡ (νy:Tester1)(Pclient | Pserver)
 ≡ (νy:Tester1)(x-!1.x-?(z:bool).0 | x+?(y:int).x+!true.0)
-≡ (νy:Tester1)(x-!1.x-?(z:bool).0 | x+?(z:int).x+!true.0) // α-equivalencia
-{x,-} → (νy:Tester1)(x-?(z:bool).0 | (x+!true.0){1/z})
+{x,-} → (νy:Tester1)(x-?(z:bool).0 | (x+!true.0){1/y})
 ≡ (νy:Tester1)(x-?(z:bool).0 | x+!true.0)
 ≡ (νy:Tester1)(x+!true.0 | x-?(z:bool).0)
 {x,-} → (νy:Tester1)(0 | 0{true/z})
