--- a/prácticas/p02/ej01.md
+++ b/prácticas/p02/ej01.md
@@ -4,11 +4,11 @@
 
 ```
 x+:end, z:int completed                              x-:end completed
------------------------ [T-Nil]                      ----------------- [T-Nil]    --------- [T-Int]
-x+:end, z:int ⊢ 0                                    x-:end ⊢ 0                   ∅ ⊢ 2:int
---------------------------------- [T-In]             -------------------------------------- [T-Out]    --------- [T-Int]
-x+:?int.end, z:int ⊢ x+?(z:int).0                    x-:!int.end ⊢ x-!2.0                              ∅ ⊢ 1:int
------------------------------------------- [T-In]    ----------------------------------------------------------- [T-Out]
+----------------------- [T-Nil]                      ----------------- [T-Nil]    ----- [T-Int]
+x+:end, z:int ⊢ 0                                    x-:end ⊢ 0                   ∅ ⊢ 2
+--------------------------------- [T-In]             ---------------------------------- [T-Out]    ----- [T-Int]
+x+:?int.end, z:int ⊢ x+?(z:int).0                    x-:!int.end ⊢ x-!2.0                          ∅ ⊢ 1
+------------------------------------------ [T-In]    --------------------------------------------------- [T-Out]
 x+:?int.?int.end ⊢ x+?(z:int).x+?(z:int).0           x-:!int.!int.end ⊢ x-!1.x-!2.0
 ----------------------------------------------------------------------------------- [T-Par]
 x+:?int.?int.end, x-:!int.!int.end ⊢ x+?(z:int).x+?(z:int).0 | x-!1.x-!2.0
@@ -46,3 +46,19 @@ x+:?int.?int.end, x-:!int.!int.end ⊢ x+?(z:int).x+?(z:int).0 | x-!1.0 | x-!2.0
 ```
 
 No está bien tipado porque 2 procesos quieren usar el mismo endpoint `x-` y ya vimos que eso no es posible con **binary** session types. El proceso `x-!2.0` pierde el tipado del endpoint `x-` y se traba el juicio de tipado.
+
+## d)
+
+```
+x+:end, z:int completed                              x-:end completed
+----------------------- [T-Nil]                      ---------------- [T-Nil]    ----- [T-Int]
+x+:end, z:int ⊢ 0                                    x-:end ⊢ 0                  ∅ ⊢ 2
+--------------------------------- [T-In]             --------------------------------- [T-Out]    ----- [T-Int]
+x+:?int.end, z:int ⊢ x+?(z:int).0                    x-:!int.end ⊢ x-!2.0                         ∅ ⊢ 1
+------------------------------------------ [T-In]    -------------------------------------------------- [T-Out]
+x+:?int.?int.end ⊢ x+?(z:int).x+?(z:int).0           x-:!int.!int.end ⊢ x-!1.x-!2.0
+-------------------------------------------------------------------------- [T-Par]
+x+:?int.?int.end, x-:!int.!int.end ⊢ x+?(z:int).x+?(z:int).0 | x-!1.x-!2.0
+```
+
+Bien tipado. Necesitamos agregar al contexto inicial el tipado del canal `x`.
