--- a/prácticas/p02/ej01.md
+++ b/prácticas/p02/ej01.md
@@ -62,3 +62,16 @@ x+:?int.?int.end, x-:!int.!int.end ⊢ x+?(z:int).x+?(z:int).0 | x-!1.x-!2.0
 ```
 
 Bien tipado. Necesitamos agregar al contexto inicial el tipado del canal `x`.
+
+## e)
+
+```
+                                                                 X
+                                                     x-:!int.end ⊢ x-!true.0     ∅ ⊢ 1
+                                                     --------------------------------- [T-Out]
+x+:?int.?int.end ⊢ x+?(z:int).x+?(z:int).0           x-:!int.!int.end ⊢ x-!1.x-!true.0
+-------------------------------------------------------------------------- [T-Par]
+x+:?int.?int.end, x-:!int.!int.end ⊢ x+?(z:int).x+?(z:int).0 | x-!1.x-!true.0
+```
+
+No está bien tipado porque el proceso `x-!true.0` quiere mandar un `bool` pero el endpoint `x-:!int.end` solo admite enviar un `int`.
