--- a/prácticas/p02/ej01.md
+++ b/prácticas/p02/ej01.md
@@ -75,3 +75,34 @@ x+:?int.?int.end, x-:!int.!int.end ⊢ x+?(z:int).x+?(z:int).0 | x-!1.x-!true.0
 ```
 
 No está bien tipado porque el proceso `x-!true.0` quiere mandar un `bool` pero el endpoint `x-:!int.end` solo admite enviar un `int`.
+
+## f)
+
+Sea `P ≡ (νx:?int.?int.end)(x+?(z:int).x+?(z:int).0 | x-!1.z+!x-.0)`.
+
+```
+                                             ----- [T-Int]
+z+:!(!int.end).end, z-:end, w:end ⊢ P        ∅ ⊢ 2
+-------------------------------------------------- [T-Out]
+z+:!(!int.end).end, z-:end, w:!int.end ⊢ P | w!2.0
+------------------------------------------------------------------ [T-In]
+z+:!(!int.end).end, z-:?(!int.end).end ⊢ P | z-?(w:!int.end).w!2.0
+```
+
+Basta ver el juicio de tipado de `z+:!(!int.end).end, z-:end, w:end ⊢ P`.
+
+```
+z-:end, w:end, x+:end, y:int completed                              z+:end completed
+-------------------------------------- [T-Nil]                      ---------------- [T-Nil]    ----------------
+z-:end, w:end, x+:end, y:int ⊢ 0                                    z+:end ⊢ 0                  x-:!int.end ⊢ x-
+------------------------------------------------ [T-In]             -------------------------------------------- [T-Out]    ----- [T-Int]
+z-:end, w:end, x+:?int.end, y:int ⊢ x+?(y:int).0                    z+:!(!int.end).end, x-:!int.end ⊢ z+!x-.0               ∅ ⊢ 1
+--------------------------------------------------------- [T-In]    ------------------------------------------------------------- [T-Out]
+z-:end, w:end, x+:?int.?int.end ⊢ x+?(y:int).x+?(y:int).0           z+:!(!int.end).end, x-:!int.!int.end ⊢ x-!1.z+!x-.0
+----------------------------------------------------------------------------------------------------------------------- [T-Par]
+z+:!(!int.end).end, z-:end, w:end, x+:?int.?int.end, x-:!int.!int.end ⊢ x+?(z:int).x+?(z:int).0 | x-!1.z+!x-.0
+-------------------------------------------------------------------------------------------------------------- [T-Res]
+z+:!(!int.end).end, z-:end, w:end ⊢ (νx:?int.?int.end)(x+?(z:int).x+?(z:int).0 | x-!1.z+!x-.0)
+```
+
+Bien tipado.
