--- a/prácticas/p02/ej01.md
+++ b/prácticas/p02/ej01.md
@@ -106,3 +106,17 @@ z+:!(!int.end).end, z-:end, w:end ⊢ (νx:?int.?int.end)(x+?(z:int).x+?(z:int).
 ```
 
 Bien tipado.
+
+## g)
+
+```
+(νx:?int.?int.end)(x+?(z:int).x+?(z:int).0 | x-!1.z+!x-.0) | z-?(w:!int.end).w-!2.0
+```
+
+Es muy parecido al inciso f) pero no está bien tipado. Puntualmente en este proceso:
+
+```
+z-?(w:!int.end).w-!2.0
+```
+
+Recibimos un canal delegado el cual ligamos a la variable `w`. Pero luego se intenta enviar por el canal `w-` con polaridad y esta variable no está en el contexto. Cuando se recibe un canal delegado no le ponemos polaridad a la variable ya que no podemos saber qué endpoint fue delegado.
