--- a/prácticas/p02/ej01.md
+++ b/prácticas/p02/ej01.md
@@ -4,11 +4,11 @@
 
 ```
 x+:end, z:int completed                              x-:end completed
------------------------ [T-Nil]                      ----------------- [T-Nil]    ----- [T-Int]
-x+:end, z:int ⊢ 0                                    x-:end ⊢ 0                   ∅ ⊢ 2
---------------------------------- [T-In]             ---------------------------------- [T-Out]    ----- [T-Int]
-x+:?int.end, z:int ⊢ x+?(z:int).0                    x-:!int.end ⊢ x-!2.0                          ∅ ⊢ 1
------------------------------------------- [T-In]    --------------------------------------------------- [T-Out]
+----------------------- [T-Nil]                      ----------------- [T-Nil]    --------- [T-Aux]
+x+:end, z:int ⊢ 0                                    x-:end ⊢ 0                   ∅ ⊢ 2:int
+--------------------------------- [T-In]             -------------------------------------- [T-Out]    --------- [T-Aux]
+x+:?int.end, z:int ⊢ x+?(z:int).0                    x-:!int.end ⊢ x-!2.0                              ∅ ⊢ 1:int
+------------------------------------------ [T-In]    ----------------------------------------------------------- [T-Out]
 x+:?int.?int.end ⊢ x+?(z:int).x+?(z:int).0           x-:!int.!int.end ⊢ x-!1.x-!2.0
 ----------------------------------------------------------------------------------- [T-Par]
 x+:?int.?int.end, x-:!int.!int.end ⊢ x+?(z:int).x+?(z:int).0 | x-!1.x-!2.0
@@ -51,11 +51,11 @@ No está bien tipado porque 2 procesos quieren usar el mismo endpoint `x-` y ya 
 
 ```
 x+:end, z:int completed                              x-:end completed
------------------------ [T-Nil]                      ---------------- [T-Nil]    ----- [T-Int]
-x+:end, z:int ⊢ 0                                    x-:end ⊢ 0                  ∅ ⊢ 2
---------------------------------- [T-In]             --------------------------------- [T-Out]    ----- [T-Int]
-x+:?int.end, z:int ⊢ x+?(z:int).0                    x-:!int.end ⊢ x-!2.0                         ∅ ⊢ 1
------------------------------------------- [T-In]    -------------------------------------------------- [T-Out]
+----------------------- [T-Nil]                      ---------------- [T-Nil]    --------- [T-Aux]
+x+:end, z:int ⊢ 0                                    x-:end ⊢ 0                  ∅ ⊢ 2:int
+--------------------------------- [T-In]             ------------------------------------- [T-Out]    --------- [T-Aux]
+x+:?int.end, z:int ⊢ x+?(z:int).0                    x-:!int.end ⊢ x-!2.0                             ∅ ⊢ 1:int
+------------------------------------------ [T-In]    ---------------------------------------------------------- [T-Out]
 x+:?int.?int.end ⊢ x+?(z:int).x+?(z:int).0           x-:!int.!int.end ⊢ x-!1.x-!2.0
 -------------------------------------------------------------------------- [T-Par]
 x+:?int.?int.end, x-:!int.!int.end ⊢ x+?(z:int).x+?(z:int).0 | x-!1.x-!2.0
@@ -67,8 +67,8 @@ Bien tipado. Necesitamos agregar al contexto inicial el tipado del canal `x`.
 
 ```
                                                                  X
-                                                     x-:!int.end ⊢ x-!true.0     ∅ ⊢ 1
-                                                     --------------------------------- [T-Out]
+                                                     x-:!int.end ⊢ x-!true.0     ∅ ⊢ 1:int
+                                                     ------------------------------------- [T-Out]
 x+:?int.?int.end ⊢ x+?(z:int).x+?(z:int).0           x-:!int.!int.end ⊢ x-!1.x-!true.0
 -------------------------------------------------------------------------- [T-Par]
 x+:?int.?int.end, x-:!int.!int.end ⊢ x+?(z:int).x+?(z:int).0 | x-!1.x-!true.0
@@ -81,9 +81,9 @@ No está bien tipado porque el proceso `x-!true.0` quiere mandar un `bool` pero 
 Sea `P ≡ (νx:?int.?int.end)(x+?(z:int).x+?(z:int).0 | x-!1.z+!x-.0)`.
 
 ```
-                                             ----- [T-Int]
-z+:!(!int.end).end, z-:end, w:end ⊢ P        ∅ ⊢ 2
--------------------------------------------------- [T-Out]
+                                             --------- [T-Aux]
+z+:!(!int.end).end, z-:end, w:end ⊢ P        ∅ ⊢ 2:int
+------------------------------------------------------ [T-Out]
 z+:!(!int.end).end, z-:end, w:!int.end ⊢ P | w!2.0
 ------------------------------------------------------------------ [T-In]
 z+:!(!int.end).end, z-:?(!int.end).end ⊢ P | z-?(w:!int.end).w!2.0
@@ -93,11 +93,11 @@ Basta ver el juicio de tipado de `z+:!(!int.end).end, z-:end, w:end ⊢ P`.
 
 ```
 z-:end, w:end, x+:end, y:int completed                              z+:end completed
--------------------------------------- [T-Nil]                      ---------------- [T-Nil]    ----------------
-z-:end, w:end, x+:end, y:int ⊢ 0                                    z+:end ⊢ 0                  x-:!int.end ⊢ x-
------------------------------------------------- [T-In]             -------------------------------------------- [T-Out]    ----- [T-Int]
-z-:end, w:end, x+:?int.end, y:int ⊢ x+?(y:int).0                    z+:!(!int.end).end, x-:!int.end ⊢ z+!x-.0               ∅ ⊢ 1
---------------------------------------------------------- [T-In]    ------------------------------------------------------------- [T-Out]
+-------------------------------------- [T-Nil]                      ---------------- [T-Nil]    ------------------------- [T-Aux]
+z-:end, w:end, x+:end, y:int ⊢ 0                                    z+:end ⊢ 0                  x-:!int.end ⊢ x-:!int.end
+------------------------------------------------ [T-In]             ----------------------------------------------------- [T-Out]    --------- [T-Aux]
+z-:end, w:end, x+:?int.end, y:int ⊢ x+?(y:int).0                    z+:!(!int.end).end, x-:!int.end ⊢ z+!x-.0                        ∅ ⊢ 1:int
+--------------------------------------------------------- [T-In]    -------------------------------------------------------------------------- [T-Out]
 z-:end, w:end, x+:?int.?int.end ⊢ x+?(y:int).x+?(y:int).0           z+:!(!int.end).end, x-:!int.!int.end ⊢ x-!1.z+!x-.0
 ----------------------------------------------------------------------------------------------------------------------- [T-Par]
 z+:!(!int.end).end, z-:end, w:end, x+:?int.?int.end, x-:!int.!int.end ⊢ x+?(z:int).x+?(z:int).0 | x-!1.z+!x-.0
