--- a/prácticas/p02/ej01.md
+++ b/prácticas/p02/ej01.md
@@ -120,3 +120,21 @@ z-?(w:!int.end).w-!2.0
 ```
 
 Recibimos un canal delegado el cual ligamos a la variable `w`. Pero luego se intenta enviar por el canal `w-` con polaridad y esta variable no está en el contexto. Cuando se recibe un canal delegado no le ponemos polaridad a la variable ya que no podemos saber qué endpoint fue delegado.
+
+## h)
+
+```
+y-:end, x+:end, z:int completed
+------------------------------- [T-Nil]
+y-:end, x+:end, z:int ⊢ 0
+---------------------------------- [T-In]    ------------------------- [T-Aux]
+y-:end, x+:?int.end ⊢ x+?(z:int).0           x-:!int.end ⊢ x-:!int.end
+---------------------------------------------------------------------- [T-Out]                       X
+y-:!(!int.end).end, x+:?int.end, x-:!int.end ⊢ y-!x-.x+?(z:int).0                 y+:?(!int.end).end ⊢ y+?(z:?int.end).z?(w:int).0
+---------------------------------------------------------------------------------------------------------------------------------- [T-Par]
+y-:!(!int.end).end, y+:?(!int.end).end, x+:?int.end, x-:!int.end ⊢ y-!x-.x+?(z:int).0 | y+?(z:?int.end).z?(w:int).0
+------------------------------------------------------------------------------------------------------------------- [T-Res]
+y-:!(!int.end).end, y+:?(!int.end).end ⊢ (νx:?int.end)(y-!x-.x+?(z:int).0 | y+?(z:?int.end).z?(w:int).0)
+```
+
+No está bien tipado. En el contexto tenemos que `y+:?(!int.end).end` recibe un canal delegado con session type `!int.end`. Pero el proceso liga la variable `z` con session type `?int.end`.
