--- a/prácticas/p02/ej01.md
+++ b/prácticas/p02/ej01.md
@@ -138,3 +138,21 @@ y-:!(!int.end).end, y+:?(!int.end).end ⊢ (νx:?int.end)(y-!x-.x+?(z:int).0 | y
 ```
 
 No está bien tipado. En el contexto tenemos que `y+:?(!int.end).end` recibe un canal delegado con session type `!int.end`. Pero el proceso liga la variable `z` con session type `?int.end`.
+
+## i)
+
+```
+y-:end, x+:end, z:int completed                                                   y+:end, z:end completed
+------------------------------- [T-Nil]                                           ----------------------- [T-Nil]    --------- [T-Aux]
+y-:end, x+:end, z:int ⊢ 0                                                         y+:end, z:end ⊢ 0                  ∅ ⊢ 1:int
+---------------------------------- [T-In]    ------------------------- [T-Aux]    -------------------------------------------- [T-Out]
+y-:end, x+:?int.end ⊢ x+?(z:int).0           x-:!int.end ⊢ x-:!int.end            y+:end, z:!int.end ⊢ z!1.0
+---------------------------------------------------------------------- [T-Out]    ------------------------------------------ [T-In]
+y-:!(!int.end).end, x+:?int.end, x-:!int.end ⊢ y-!x-.x+?(z:int).0                 y+:?(!int.end).end ⊢ y+?(z:!int.end).z!1.0
+---------------------------------------------------------------------------------------------------------------------------- [T-Par]
+y-:!(!int.end).end, y+:?(!int.end).end, x+:?int.end, x-:!int.end ⊢ y-!x-.x+?(z:int).0 | y+?(z:!int.end).z!1.0
+------------------------------------------------------------------------------------------------------------- [T-Res]
+y-:!(!int.end).end, y+:?(!int.end).end ⊢ (νx:?int.end)(y-!x-.x+?(z:int).0 | y+?(z:!int.end).z!1.0)
+```
+
+Bien tipado.
