--- a/prácticas/p02/tipos-finitos/ej01.md
+++ b/prácticas/p02/tipos-finitos/ej01.md
@@ -1,5 +1,7 @@
 # Ejercicio 1
 
+Para cada uno de los siguientes procesos, indicar si están bien tipados o no. En caso afirmativo, mostrar una derivación del juicio de tipado.
+
 ## a)
 
 ```
