--- a/prácticas/p02/tipos-infinitos/ej02.md
+++ b/prácticas/p02/tipos-infinitos/ej02.md
@@ -6,10 +6,22 @@ Para cada uno de los siguientes protocolos, defina el tipo sesión correspondien
 
 `Suma`: El cliente envía una secuencia de números enteros, que finaliza cuando envía el mensaje `fin`. Cuando el servidor recibe `fin`, responde con la suma de los elementos recibidos.
 
+```
+Suma = μX.⊕[numero:!int.X, fin:?int.end]
+```
+
 ## b)
 
 `Files`: El cliente desea utilizar repetidamente un archivo. Es decir, el cliente puede abrir un archivo, leerlo hasta que decide cerrarlo. A continuación puede volver a abrir el archivo, o finalizar su utilización.
 
+```
+Files = μX.⊕[open:μY.⊕[read:?string.Y, close:X], stop:end]
+```
+
 ## c)
 
 Un cliente puede enviar los coeficientes de un polinomio de grado arbitrario, y luego el servidor responde con todas las raices reales calculadas. Cada coeficiente y cada raíz se transmite en un mensaje.
+
+```
+Poly = μX.⊕[coef:!float.X, roots:μY.&[root:?float.Y, stop:end]]
+```
