Completa el ejercicio 1

--- a/prácticas/p04/ej01.md
+++ b/prácticas/p04/ej01.md
@@ -91,6 +91,10 @@ inciso b)
 ?(?int.end).end ≤ ?(?float.end).end
 ```
 
+```
+S ≤ T
+```
+
 ## f)
 
 ```
@@ -106,16 +110,106 @@ inciso a)
 ?(!float.end).end ≤ ?(!int.end).end
 ```
 
+```
+T ≤ S
+```
+
 ## g)
 
 ```
-S = ⊕[l1: !int.end, l2: end]
-T = ⊕[l1: !int.end]
+S = ⊕[l1:!int.end, l2:end]
+T = ⊕[l1:!int.end]
 ```
 
 ```
+             --------- [S-End]
+int ≤ int    end ≤ end
+---------------------- [S-OutS]
+!int.end ≤ !int.end
+--------------------------------------- [S-Choice]
+⊕[l1:!int.end, l2:end] ≤ ⊕[l1:!int.end]
+```
 
+```
+S ≤ T
+```
 
------------------------------------------- [S-Choice]
-⊕[l1: !int.end, l2: end] ≤ ⊕[l1: !int.end]
+## h)
+
+```
+S = ⊕[l1:!int.end]
+T = ⊕[l1:!float.end]
+```
+
+```
+               --------- [S-End]
+int ≤ float    end ≤ end
+------------------------ [S-OutS]
+!float.end ≤ !int.end
+--------------------------------- [S-Choice]
+⊕[l1:!float.end] ≤ ⊕[l1:!int.end]
+```
+
+```
+T ≤ S
+```
+
+## i)
+
+```
+S = ⊕[l1:?int.end]
+T = ⊕[l1:?float.end]
+```
+
+```
+               --------- [S-End]
+int ≤ float    end ≤ end
+------------------------ [S-InS]
+?int.end ≤ ?float.end
+--------------------------------- [S-Choice]
+⊕[l1:?int.end] ≤ ⊕[l1:?float.end]
+```
+
+```
+S ≤ T
+```
+
+## j)
+
+```
+S = &[l1:!int.end]
+T = &[l1:!float.end]
+```
+
+```
+               --------- [S-End]
+int ≤ float    end ≤ end
+------------------------ [S-OutS]
+!float.end ≤ !int.end
+--------------------------------- [S-Branch]
+&[l1:!float.end] ≤ &[l1:!int.end]
+```
+
+```
+T ≤ S
+```
+
+## k)
+
+```
+S = &[l1:?int.end]
+T = &[l1:?float.end]
+```
+
+```
+               --------- [S-End]
+int ≤ float    end ≤ end
+------------------------ [S-InS]
+?int.end ≤ ?float.end
+--------------------------------- [S-Branch]
+&[l1:?int.end] ≤ &[l1:?float.end]
+```
+
+```
+S ≤ T
 ```
