--- a/prácticas/p04/ej03.md
+++ b/prácticas/p04/ej03.md
@@ -49,17 +49,109 @@ S = μX.!(?float.end).!(?int.end).X
 T = μX.!(?float.end).X
 ```
 
+`R = {(T,S)}`
+
+```
+(T,S) ∈ R
+unfold(T) = !(?float.end).T
+unfold(S) = !(?float.end).!(?int.end).S
+⇒ (?float.end,?float.end) ∈ R, (T,!(?int.end).S) ∈ R
+```
+
+`R = {(T,S), (?float.end,?float.end), (T,!(?int.end).S)}`
+
+```
+(?float.end,?float.end) ∈ R
+⇒ (float,float) ∈ R, (end,end) ∈ R
+```
+
+`R = {(T,S), (?float.end,?float.end), (T,!(?int.end).S), (float,float), (end,end)}`
+
+```
+(T,!(?int.end).S) ∈ R
+unfold(T) = !(?float.end).T
+⇒ (?int.end,?float.end) ∈ R, (T,S) ∈ R
+```
+
+`R = {(T,S), (?float.end,?float.end), (T,!(?int.end).S), (float,float), (end,end), (?int.end,?float.end)}`
+
+```
+(float,float) ∈ R
+⇒ float ≺ float
+```
+
+```
+(end,end) ∈ R
+⇒ end ≺ end
+```
+
+```
+(?int.end,?float.end) ∈ R
+⇒ (int,float) ∈ R, (end,end) ∈ R
+```
+
+`R = {(T,S), (?float.end,?float.end), (T,!(?int.end).S), (float,float), (end,end), (?int.end,?float.end), (int,float)}`
+
+```
+(int,float) ∈ R
+⇒ int ≺ float
+```
+
+`∴ (T,S) ∈ R ⇒ T ≤ S`
+
+## c)
+
+```
+S = µX.!(?float.end).!(?int.end).X
+T = µX.!(?int.end).X
+```
+
 `R = {(S,T)}`
 
 ```
 (S,T) ∈ R
 unfold(S) = !(?float.end).!(?int.end).S
-unfold(T) = !(?float.end).T
-⇒ (?float.end,?float.end) ∈ R, (!(?int.end).S,T) ∈ R
+unfold(T) = !(?int.end).T
+⇒ (?int.end,?float.end) ∈ R, (!(?int.end).S,T) ∈ R
 ```
 
-`R = {(S,T), (?float.end,?float.end), (!(?int.end).S,T)}`
+`R = {(S,T), (?int.end,?float.end), (!(?int.end).S,T)}`
 
 ```
-(?float.end,?float.end) ∈ R
+(?int.end,?float.end) ∈ R
+⇒ (int,float) ∈ R, (end,end) ∈ R
 ```
+
+`R = {(S,T), (?int.end,?float.end), (!(?int.end).S,T), (int,float), (end,end)}`
+
+```
+(!(?int.end).S,T) ∈ R
+unfold(T) = !(?int.end).T
+⇒ (?int.end,?int.end) ∈ R, (S,T) ∈ R
+```
+
+`R = {(S,T), (?int.end,?float.end), (!(?int.end).S,T), (int,float), (end,end), (?int.end,?int.end)}`
+
+```
+(int,float) ∈ R
+⇒ int ≺ float
+```
+
+```
+(end,end) ∈ R
+⇒ end ≺ end
+```
+
+```
+(?int.end,?int.end) ∈ R
+⇒ (int,int) ∈ R, (end,end) ∈ R
+```
+
+`R = {(S,T), (?int.end,?float.end), (!(?int.end).S,T), (int,float), (end,end), (?int.end,?int.end), (int,int)}`
+
+```
+(int,int) ∈ R
+⇒ int ≺ int
+```
+
+`∴ (S,T) ∈ R ⇒ S ≤ T`
