--- a/prácticas/p02/tipos-finitos/ej02.md
+++ b/prácticas/p02/tipos-finitos/ej02.md
@@ -29,27 +29,54 @@ x+:?(&[Done:end, Next:?int.!int.end]).end ⊢ x+?(y:&[Done:end, Next:?int.!int.e
 ## b)
 
 ```
-(νx:⊕[Pr:!int.?bool.end, Co:!int.!int.?bool.end]) P
+(νx:⊕[Pr:!int.?bool.end, Co:!int.!int.?bool.end]) (P | Q)
 ```
 
 ```
-P ≡ (x+◁Pr.x+!1.x+?(z:bool).0) | (x-▷[Pr:x-?(z:int).x-!true.0, Co:x-?(z:int).x-?(z:int).x-!true.0])
+P = (x+◁Pr.x+!1.x+?(z:bool).0)
+Q = (x-▷[Pr:x-?(z:int).x-!true.0, Co:x-?(z:int).x-?(z:int).x-!true.0])
 ```
 
 ```
-                                                                                                                                                                                x-:end, z:int completed
-                                                                                                                                                       ------------- [T-Aux]    ----------------------- [T-Nil]
-                     x+:end, z:bool completed                                                                       x-:end, z:int completed            ∅ ⊢ true:bool            x-:end, z:int ⊢ 0
-                     ------------------------ [T-Nil]                                      ------------- [T-Aux]    ----------------------- [T-Nil]    -------------------------------------------- [T-Out]
-                     x+:end, z:bool ⊢ 0                                                    ∅ ⊢ true:bool            x-:end, z:int ⊢ 0                  x-:!bool.end, z:int ⊢ x-!true.0
---------- [T-Aux]    ---------------------------- [T-In]                                   -------------------------------------------- [T-Out]        ----------------------------------------------- [T-In]
-∅ ⊢ 1:int            x+:?bool.end ⊢ x+?(z:bool).0                                          x-:!bool.end, z:int ⊢ x-!true.0                             x-:?int.!bool.end, z:int ⊢ x-?(z:int).x-!true.0
-------------------------------------------------- [T-Out]                                  ---------------------------------------- [T-In]             -------------------------------------------------------- [T-In]
-x+:!int.?bool.end ⊢ x+!1.x+?(z:bool).0                                                     x-:?int.!bool.end ⊢ x-?(z:int).x-!true.0                    x-:?int.?int.!bool.end ⊢ x-?(z:int).x-?(z:int).x-!true.0
----------------------------------------------------------------------------- [T-Choice]    -------------------------------------------------------------------------------------------------------------------- [T-Branch]
-x+:⊕[Pr:!int.?bool.end, Co:!int.!int.?bool.end] ⊢ (x+◁Pr.x+!1.x+?(z:bool).0)               x-:&[Pr:?int.!bool.end, Co:?int.?int.!bool.end] ⊢ (x-▷[Pr:x-?(z:int).x-!true.0, Co:x-?(z:int).x-?(z:int).x-!true.0])
---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- [T-Par]
-x+:⊕[Pr:!int.?bool.end, Co:!int.!int.?bool.end], x-:&[Pr:?int.!bool.end, Co:?int.?int.!bool.end] ⊢ (x+◁Pr.x+!1.x+?(z:bool).0) | (x-▷[Pr:x-?(z:int).x-!true.0, Co:x-?(z:int).x-?(z:int).x-!true.0])
--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- [T-Res]
-(νx:⊕[Pr:!int.?bool.end, Co:!int.!int.?bool.end]) ((x+◁Pr.x+!1.x+?(z:bool).0) | (x-▷[Pr:x-?(z:int).x-!true.0, Co:x-?(z:int).x-?(z:int).x-!true.0]))
+S = ⊕[Pr:!int.?bool.end, Co:!int.!int.?bool.end]
+T = &[Pr:?int.!bool.end, Co:?int.?int.!bool.end]
+```
+
+```
+(1)         (2)
+--------    ---------
+x+:S ⊢ P    x-:T ⊢ Q
+--------------------- [T-Par]
+x+:S, x-:T ⊢ P | Q
+------------------- [T-Res]
+(νx:S) (P | Q)
+```
+
+Rama `(1)`
+
+```
+                     x+:end, z:bool completed
+                     ------------------------ [T-Nil]
+                     x+:end, z:bool ⊢ 0
+--------- [T-Aux]    ---------------------------- [T-In]
+∅ ⊢ 1:int            x+:?bool.end ⊢ x+?(z:bool).0
+------------------------------------------------- [T-Out]
+x+:!int.?bool.end ⊢ x+!1.x+?(z:bool).0
+---------------------------------------------------------------------------- [T-Choice]
+x+:⊕[Pr:!int.?bool.end, Co:!int.!int.?bool.end] ⊢ x+◁Pr.x+!1.x+?(z:bool).0
+```
+
+Rama `(2)`
+```
+                                                                                     x-:end, z:int completed
+                                                            ------------- [T-Aux]    ----------------------- [T-Nil]
+                         x-:end, z:int completed            ∅ ⊢ true:bool            x-:end, z:int ⊢ 0
+------------- [T-Aux]    ----------------------- [T-Nil]    -------------------------------------------- [T-Out]
+∅ ⊢ true:bool            x-:end, z:int ⊢ 0                  x-:!bool.end, z:int ⊢ x-!true.0
+-------------------------------------------- [T-Out]        ----------------------------------------------- [T-In]
+x-:!bool.end, z:int ⊢ x-!true.0                             x-:?int.!bool.end, z:int ⊢ x-?(z:int).x-!true.0
+---------------------------------------- [T-In]             -------------------------------------------------------- [T-In]
+x-:?int.!bool.end ⊢ x-?(z:int).x-!true.0                    x-:?int.?int.!bool.end ⊢ x-?(z:int).x-?(z:int).x-!true.0
+-------------------------------------------------------------------------------------------------------------------- [T-Branch]
+x-:&[Pr:?int.!bool.end, Co:?int.?int.!bool.end] ⊢ (x-▷[Pr:x-?(z:int).x-!true.0, Co:x-?(z:int).x-?(z:int).x-!true.0])
 ```
